<resources>
    <string name="app_name">irs_vms</string>
    <!--    MainActivity-->
    <string name="btn_access_control">通行预览</string>
    <string name="btn_video_surveillance">视频监控</string>
    <string name="btn_inspection">巡检任务</string>
    <string name="btn_temp_screening">体温筛查</string>
    <string name="btn_park_track">园区轨迹</string>
    <string name="btn_statistics">数据统计</string>
    <string name="btn_abnormal_alarm">异常报警</string>
    <string name="btn_more">系统通知</string>
    <string name="btn_video_replay">视频回放</string>
    <string name="btn_home">首页</string>
    <string name="btn_alarm">报警</string>
    <string name="btn_user">我的</string>
    <string name="btn_favorite_cams_manage">管理</string>

    <string name="tv_position">烟台</string>
    <string name="tv_favorite_cams_title">智慧园区</string>
    <string name="et_search_hint">&#160;&#160;搜索监控区域/设备/名称</string>


    <!--    LoginActivity-->
    <string name="tv_copyright">COPYRIGHT@2021&#160;睿创微纳.版权所有</string>
    <string name="et_name_hint">User Name</string>
    <string name="et_password_hint">Password</string>
    <string name="cb_save_password">记住密码</string>
    <string name="login_btn_alter_password">修改密码</string>
    <string name="btn_login">立&#160;即&#160;登&#160;录</string>
    <string name="tv_login_failed_info">用户名或密码错误，请重新输入</string>
    <string name="tv_login_info_empty">请输入用户名和密码</string>
    <string name="tv_login_service_failed">服务器连接失败</string>
    <string name="tst_login_success">登录成功</string>

    <!--    UserActivity-->
    <string name="tv_user_menu_setting">我的设置</string>
    <string name="tv_user_menu_alarm_pushing">报警推送</string>
    <string name="tv_user_menu_feedback">意见反馈</string>
    <string name="tv_user_menu_customer_service">联系客服</string>
    <string name="tv_user_cs_text">联系客服</string>
    <string name="tv_user_cs_number">0535-02602</string>


    <!--    AlterPasswordActivity-->
    <string name="tv_alter_password_title">修改密码</string>
    <string name="tv_alter_password_old">旧密码</string>
    <string name="et_hint_alter_password_old">请输入旧密码</string>
    <string name="tv_alter_password_new">新密码</string>
    <string name="et_hint_alter_password_new">请输入新密码</string>
    <string name="tv_alter_password_new_confirm">新密码</string>
    <string name="et_hint_alter_password_new_confirm">请再次输入新密码</string>
    <string name="btn_alter_password_confirm">确定修改</string>
    <!--OfflineInspectionFragment-->
    <string name="tst_inspect_list_empty">目前没有巡检任务</string>

    <!--AllAlarmFragment-->
    <string name="tst_alarm_list_empty">目前没有巡检任务</string>


    <!--    DeviceListActivity-->

    <string name="device_list_tv_title">设备列表</string>
    <string name="tst_device_list_empty">未找到设备</string>
    <string name="search_device_list_empty">搜索未找到设备</string>
    <string name="tst_get_device_id_error">获取设备信息失败</string>
    <string name="device_no_name">未命名设备</string>
    <string name="org_unknown">未知区域</string>

    <!--    KeyMonitorActivity-->
    <string name="keymonitor_list_tv_title">重点监控管理</string>
    <string name="tst_del_device_id_error">删除监控设备失败</string>
    <string name="tst_add_device_id_error">添加监控设备失败</string>
    <string name="tst_key_device_list_empty">未找到重点监控设备</string>

    <!--    AddKeyMonitorActivity-->
    <string name="add_keymonitor_tv_title">添加重点监控</string>

    <!--    PreviewActivity-->
    <string name="tst_get_rtsp_error">获取设备信号失败</string>
    <string name="preview_tv_title_default">未知设备</string>
    <string name="preview_rb_channel1">通道1</string>
    <string name="preview_rb_channel2">通道2</string>
    <string name="tv_loading">视频正在加载中，请稍候...</string>
    <string name="ps_tv_zoom">变焦</string>
    <string name="ps_tv_focus">聚焦</string>
    <string name="ps_tv_aperture">光圈</string>
    <string name="tst_preview_pause">已暂停</string>
    <string name="tst_preview_restart">继续播放</string>
    <string name="tst_snap_shot_success">截图成功</string>
    <string name="tst_snap_shot_failed">截图失败</string>
    <string name="tst_record_start">录制开始</string>
    <string name="tst_record_end">录制结束</string>
    <string name="tst_record_failed">录制失败</string>


    <!--  AccessControlActivity  -->
    <string name="access_control_tv_title">通行预览</string>
    <string name="access_control_device_name">设备名称</string>
    <string name="access_control_access_count">通行人次</string>
    <string name="access_control_abnormal_count">异常人次</string>
    <string name="access_control_abnormal_temp">体温异常</string>


      <!--InspectionActivity -->
    <string name="inspect_tv_title">我的任务</string>

    <!--NoticeActivity -->
    <string name="notice_tv_title">系统通知</string>


    <!--FeedBackActivity -->
    <string name="feedback_tv_title">意见反馈</string>

    <!--AlarmUploadActivity -->
    <string name="alarm_tv_title">隐患上报</string>

    <!--UrgentAlarmUploadActivity -->
    <string name="urgent_alarm_tv_title">紧急报警</string>

    <!--  TempCheckActivity  -->
    <string name="temp_check_tv_title">体温筛查</string>
    <!--  DataStatisActivity  -->
    <string name="data_analysis">数据统计</string>
    <!--  AbnormalAlarmActivity  -->
    <string name="alarm_info">报警信息</string>

<!--    ReplayListActivity-->
    <string name="replay_list_tv_title">视频回放</string>
    <string name="rl_tv_org">区&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;域</string>
    <string name="rl_tv_device">设&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备</string>
    <string name="rl_tv_start_time">开始时间</string>
    <string name="rl_tv_end_time">结束时间</string>
    <string name="rl_btn_find_replay">查找</string>
    <string name="rl_item_tv_start_time">开始：</string>
    <string name="rl_item_tv_end_time">结束：</string>
    <string name="rl_item_tv_status">状态：</string>
    <string name="rl_item_tv_status_locked">已锁定</string>
    <string name="rl_item_tv_status_unlocked">未锁定</string>
    <string name="rl_item_btn_look">查看</string>
    <string name="rl_item_btn_download">下载</string>
    <string name="rl_sp_org_empty">未添加区域</string>
    <string name="rl_sp_device_empty">未添加设备</string>
    <string name="rl_tst_unavailable_date">开始时间需大于结束时间</string>


    <!--  AlterPasswordActivity  -->
    <string name="ap_input_old_hint">旧密码不能为空</string>
    <string name="ap_input_new_hint">新密码不能为空</string>
    <string name="ap_input_same_hint">两次输入的新密码必须相同</string>



    <!--    SharedPreferences-->
    <string name="sp_user">user</string>
    <string name="user_sp_name">name</string>
    <string name="user_sp_password">password</string>
    <string name="user_sp_save_password">save</string>


    <!--    deviceType-->
    <string name="device_type_1">IPC</string>
    <string name="device_type_2">NVR</string>
    <string name="device_type_3">门禁</string>

    <!--    deviceOnline-->
    <string name="device_online">在线</string>
    <string name="device_offline">离线</string>


<!--    DatePicker-->
    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>


</resources>
