<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alter_password_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlterPasswordActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alter_password_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_bar_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/alter_password_btn_close"
            android:layout_width="@dimen/top_bar_btn_size"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/top_bar_btn_margin"
            android:background="@drawable/btn_close"

            app:layout_constraintBottom_toBottomOf="@id/alter_password_tv_title"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/alter_password_tv_title" />

        <TextView
            android:id="@+id/alter_password_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_alter_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:layout_marginBottom="@dimen/top_bar_title_margin_bottom"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_ap_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_alter_password_old"
        android:textSize="@dimen/ap_text_size"

        app:layout_constraintBottom_toBottomOf="@id/et_ap_old_password"
        app:layout_constraintStart_toStartOf="@id/alter_password_gl_v1"
        app:layout_constraintTop_toTopOf="@id/et_ap_old_password" />

    <EditText
        android:id="@+id/et_ap_old_password"
        style="@style/MyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ap_top_et_margin_top"
        android:hint="@string/et_hint_alter_password_old"
        android:layout_marginStart="@dimen/ap_et_margin_start"
        android:gravity="center"
        android:lines="1"
        android:maxLength="20"

        app:layout_constraintTop_toBottomOf="@id/alter_password_top_bar"
        app:layout_constraintStart_toEndOf="@id/tv_ap_old_password"
        app:layout_constraintEnd_toStartOf="@id/alter_password_gl_v2"/>

    <Button
        android:id="@+id/btn_ap_hide_password_old"
        android:layout_width="@dimen/ap_hide_password_btn_size"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        android:background="@drawable/btn_hide_password"
        android:layout_marginEnd="@dimen/ap_hide_password_btn_margin_end"


        app:layout_constraintEnd_toEndOf="@id/et_ap_old_password"
        app:layout_constraintTop_toTopOf="@id/et_ap_old_password"/>


    <TextView
        android:id="@+id/tv_ap_new_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_alter_password_new"
        android:textSize="@dimen/ap_text_size"

        app:layout_constraintBottom_toBottomOf="@id/et_ap_new_password1"
        app:layout_constraintStart_toStartOf="@id/tv_ap_old_password"
        app:layout_constraintTop_toTopOf="@id/et_ap_new_password1" />

    <EditText
        android:id="@+id/et_ap_new_password1"
        style="@style/MyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ap_between_et_margin_top"
        android:hint="@string/et_hint_alter_password_new"
        android:gravity="center"
        android:lines="1"
        android:maxLength="20"

        app:layout_constraintTop_toBottomOf="@id/et_ap_old_password"
        app:layout_constraintStart_toStartOf="@id/et_ap_old_password"
        app:layout_constraintEnd_toEndOf="@id/et_ap_old_password"/>

    <Button
        android:id="@+id/btn_ap_hide_password_new1"
        android:layout_width="@dimen/ap_hide_password_btn_size"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        android:background="@drawable/btn_hide_password"
        android:layout_marginEnd="@dimen/ap_hide_password_btn_margin_end"


        app:layout_constraintEnd_toEndOf="@id/et_ap_new_password1"
        app:layout_constraintTop_toTopOf="@id/et_ap_new_password1"/>


    <TextView
        android:id="@+id/tv_ap_new_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_alter_password_new_confirm"
        android:textSize="@dimen/ap_text_size"

        app:layout_constraintBottom_toBottomOf="@id/et_ap_new_password2"
        app:layout_constraintStart_toStartOf="@id/tv_ap_old_password"
        app:layout_constraintTop_toTopOf="@id/et_ap_new_password2" />

    <EditText
        android:id="@+id/et_ap_new_password2"
        style="@style/MyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ap_between_et_margin_top"
        android:hint="@string/et_hint_alter_password_new_confirm"
        android:gravity="center"
        android:lines="1"
        android:maxLength="20"

        app:layout_constraintTop_toBottomOf="@id/et_ap_new_password1"
        app:layout_constraintStart_toStartOf="@id/et_ap_old_password"
        app:layout_constraintEnd_toEndOf="@id/et_ap_old_password"/>

    <Button
        android:id="@+id/btn_ap_hide_password_new2"
        android:layout_width="@dimen/ap_hide_password_btn_size"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        android:background="@drawable/btn_hide_password"
        android:layout_marginEnd="@dimen/ap_hide_password_btn_margin_end"


        app:layout_constraintEnd_toEndOf="@id/et_ap_new_password2"
        app:layout_constraintTop_toTopOf="@id/et_ap_new_password2"/>

    <Button
        android:id="@+id/btn_alter_password_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/ap_btn_confirm_height"
        app:layout_constraintDimensionRatio="h,64:360"
        android:background="@drawable/big_btn_bg"
        android:layout_marginTop="@dimen/ap_btn_confirm_margin_top"
        android:textColor="@color/white"
        android:text="@string/btn_alter_password_confirm"

        app:layout_constraintTop_toBottomOf="@id/et_ap_new_password2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/alter_password_gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/alter_password_gl_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />


</androidx.constraintlayout.widget.ConstraintLayout>