<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/replay_list_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReplayListActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/replay_list_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_bar_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/replay_list_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_bar_title_margin_bottom"
            android:text="@string/replay_list_tv_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/replay_list_btn_close"
            android:layout_width="@dimen/top_bar_btn_size"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/top_bar_btn_margin"
            android:background="@drawable/btn_close"

            app:layout_constraintBottom_toBottomOf="@id/replay_list_tv_title"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/replay_list_tv_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/rl_tv_org"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rl_tv_org"
        android:textSize="@dimen/rl_common_text_size"
        android:layout_marginTop="@dimen/rl_first_tv_margin_top"

        app:layout_constraintTop_toBottomOf="@id/replay_list_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rl_sp_org"
        />

    <Spinner
        android:id="@+id/rl_sp_org"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/transparent"

        app:layout_constraintStart_toStartOf="@id/rl_tv_select_start_time"
        app:layout_constraintTop_toTopOf="@id/rl_tv_org"
        app:layout_constraintBottom_toBottomOf="@id/rl_tv_org"
        />


    <TextView
        android:id="@+id/rl_tv_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rl_tv_device"
        android:textSize="@dimen/rl_common_text_size"
        android:layout_marginTop="@dimen/rl_tv_margin_top"

        app:layout_constraintTop_toBottomOf="@id/rl_tv_org"
        app:layout_constraintStart_toStartOf="@id/rl_tv_org"

        />

    <Spinner
        android:id="@+id/rl_sp_device"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/transparent"

        app:layout_constraintTop_toTopOf="@id/rl_tv_device"
        app:layout_constraintBottom_toBottomOf="@id/rl_tv_device"
        app:layout_constraintStart_toStartOf="@id/rl_tv_select_start_time"
        />


    <TextView
        android:id="@+id/rl_tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rl_tv_start_time"
        android:textSize="@dimen/rl_common_text_size"
        android:layout_marginTop="@dimen/rl_tv_margin_top"

        app:layout_constraintTop_toBottomOf="@id/rl_tv_device"
        app:layout_constraintStart_toStartOf="@id/rl_tv_org"

        />


    <TextView
        android:id="@+id/rl_tv_select_start_time"
        android:layout_width="@dimen/rl_sp_width"
        android:layout_height="25dp"
        android:background="@drawable/data_selected_bg"

        app:layout_constraintTop_toTopOf="@id/rl_tv_start_time"
        app:layout_constraintBottom_toBottomOf="@id/rl_tv_start_time"
        app:layout_constraintStart_toEndOf="@id/rl_tv_start_time"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/rl_tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rl_tv_end_time"
        android:textSize="@dimen/rl_common_text_size"
        android:layout_marginTop="@dimen/rl_tv_margin_top"

        app:layout_constraintTop_toBottomOf="@id/rl_tv_start_time"
        app:layout_constraintStart_toStartOf="@id/rl_tv_org"

        />


    <TextView
        android:id="@+id/rl_tv_select_end_time"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:background="@drawable/data_selected_bg"



        app:layout_constraintTop_toTopOf="@id/rl_tv_end_time"
        app:layout_constraintBottom_toBottomOf="@id/rl_tv_end_time"
        app:layout_constraintStart_toStartOf="@id/rl_tv_select_start_time"
        app:layout_constraintEnd_toEndOf="@id/rl_tv_select_start_time"/>

    <Button
        android:id="@+id/rl_btn_find"
        android:layout_width="@dimen/rl_btn_width"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h,360:64"
        android:text="@string/rl_btn_find_replay"
        android:background="@drawable/big_btn_bg"
        android:textSize="@dimen/rl_common_text_size"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/rl_btn_find_margin_top"

        app:layout_constraintTop_toBottomOf="@id/rl_tv_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rl_rv_margin_top"
        android:layout_marginStart="@dimen/rl_rv_margin_left"
        android:layout_marginEnd="@dimen/rl_rv_margin_left"

        app:layout_constraintTop_toBottomOf="@id/rl_btn_find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ProgressBar
        android:id="@+id/pb_replay_list"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>