<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/login_image_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_bg_image_height"
        android:background="@drawable/login_bg_image"

        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_layout_gl_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/tv_copyright"
        android:textColor="#4F000000"

        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_shadow_shape"

        app:layout_constraintBottom_toBottomOf="@id/login_layout_gl_h3"
        app:layout_constraintEnd_toEndOf="@id/login_layout_gl_v2"
        app:layout_constraintStart_toStartOf="@id/login_layout_gl_v1"
        app:layout_constraintTop_toTopOf="@id/login_layout_gl_h2">

        <TextView
            android:id="@+id/tv_login_icon_name"
            android:layout_width="@dimen/login_icon_size"
            android:layout_height="@dimen/login_icon_size"
            android:layout_marginEnd="5dp"
            android:background="@drawable/icon_login_name"
            app:layout_constraintHorizontal_chainStyle="packed"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_login_name"

            app:layout_constraintEnd_toStartOf="@id/et_login_name"
            />

        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="@dimen/login_et_width"
            android:layout_height="@dimen/login_et_height"
            android:minWidth="0dp"
            android:theme="@style/MyEditText"
            android:hint="@string/et_name_hint"
            android:textColorHint="@color/edit_line_color"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"


            app:layout_constraintStart_toEndOf="@id/tv_login_icon_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_box_gl_h1"
            />

        <Button
            android:id="@+id/btn_more_name"
            android:layout_width="@dimen/login_sub_icon_size"
            android:layout_height="@dimen/login_sub_icon_size"
            android:background="@drawable/btn_more_name"
            android:layout_marginEnd="3dp"


            app:layout_constraintTop_toTopOf="@id/et_login_name"
            app:layout_constraintEnd_toEndOf="@id/et_login_name"/>


        <TextView
            android:id="@+id/tv_login_icon_password"
            android:layout_width="@dimen/login_icon_size"
            android:layout_height="@dimen/login_icon_size"
            android:layout_marginEnd="5dp"
            android:background="@drawable/icon_login_password"
            app:layout_constraintHorizontal_chainStyle="packed"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_login_password"

            app:layout_constraintEnd_toStartOf="@id/et_login_password"
            />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="@dimen/login_et_width"
            android:layout_height="@dimen/login_et_height"
            android:layout_marginTop="15dp"
            android:minWidth="0dp"
            android:hint="@string/et_password_hint"
            android:theme="@style/MyEditText"
            android:textColorHint="@color/edit_line_color"
            android:gravity="center_horizontal"
            android:lines="1"
            android:maxLength="20"

            app:layout_constraintStart_toEndOf="@id/tv_login_icon_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_name"
            />

        <Button
            android:id="@+id/btn_hide_password"
            android:layout_width="@dimen/login_sub_icon_size"
            android:layout_height="@dimen/login_sub_icon_size"
            android:background="@drawable/btn_hide_password"
            android:layout_marginEnd="3dp"

            app:layout_constraintTop_toTopOf="@id/et_login_password"
            app:layout_constraintEnd_toEndOf="@id/et_login_password"/>

        <CheckBox
            android:id="@+id/cb_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_save_password"
            android:textColor="@color/text_color"
            android:theme="@style/MyCheckBox"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="14sp"

            app:layout_constraintTop_toBottomOf="@id/et_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_btn_alter_password"



            />

        <Button
            android:id="@+id/login_btn_alter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_alter_password"
            android:textColor="@color/text_color"
            android:background="@color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_marginStart="30dp"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_save_password"
            app:layout_constraintTop_toTopOf="@id/cb_save_password"
            app:layout_constraintBottom_toBottomOf="@id/cb_save_password"/>

        <TextView
            android:id="@+id/tv_login_failed_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/tv_login_failed_info"
            android:textColor="@color/red"
            android:visibility="invisible"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_save_password"
            app:layout_constraintBottom_toTopOf="@id/btn_login"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_main_round_bg"
            app:layout_constraintDimensionRatio="h,360:64"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/login_box_gl_h2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_box_gl_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_box_gl_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_layout_gl_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_layout_gl_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_layout_gl_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_layout_gl_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />
</androidx.constraintlayout.widget.ConstraintLayout>